# scribus

./: .gitmodules  0001-fix-code-cleanup.patch  0001-fix-missing-qApp-definition.patch  CMakeLists.txt  CMakeLists_Dependencies.cmake  scribus159.spec  scribus160.spec  scribus161.spec  scribus162.spec  scribus163.spec  scribus170.spec
.copr/: scribus158.spec  scribus159.spec
.fedora/: make-free-archive.sh  scribus158.spec
cmake/modules/: FindHUNSPELL.cmake
resources/editorconfig/: CMakeLists.txt
resources/profiles/: CMakeLists.txt
scribus/: pdf_analyzer.cpp  scribusdoc.cpp
scribus/plugins/: CMakeLists.txt
scribus/plugins/import/pdf/: importpdf.cpp  importpdf.h  slaoutput.cpp  slaoutput.h
scribus/ui/: colorlistmodel.cpp  colorlistmodel.h
