add_subdirectory(export)
add_subdirectory(import)
add_subdirectory(barcodegenerator)
add_subdirectory(colorwheel)
add_subdirectory(fileloader)
add_subdirectory(fontpreview)
add_subdirectory(gettext)
# add_subdirectory(newfromtemplateplugin)
add_subdirectory(saveastemplateplugin)
add_subdirectory(short-words)
add_subdirectory(tools)
add_subdirectory(picbrowser)
add_subdirectory(shapes)

# add_subdirectory(myplugin)
